--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     /* Sticky glass header like Apple */
     header{position:fixed;top:0;left:0;right:0;z-index:50;display:flex;justify-content:space-between;align-items:center;gap:16px;
-      padding:14px 24px;background:rgba(10,15,20,.55);backdrop-filter: blur(12px);
+      padding:calc(14px + env(safe-area-inset-top)) 20px 14px;
+      background:rgba(10,15,20,.55);backdrop-filter: blur(12px);
       border-bottom:1px solid rgba(255,255,255,.08)
     }
     header strong{font-weight:900;letter-spacing:.3px}
@@ -46,7 +47,7 @@
 .flag:active{transform:scale(0.96); opacity:.9}
 
     /* Presentation container */
-    .deck{position:fixed; inset:0; top:64px; height:calc(100dvh - 64px);}
+    .deck{position:fixed;left:0;right:0;bottom:0;top:calc(64px + env(safe-area-inset-top));height:calc(100dvh - 64px - env(safe-area-inset-top));}
     .slides{height:100%; transition: transform 900ms cubic-bezier(.2,.8,.2,1);}
     .slide{height:100%; display:flex; align-items:center; justify-content:center; padding:24px}
 
@@ -54,7 +55,7 @@
     .card{max-width:1000px; width:100%; background:var(--glass); backdrop-filter: blur(10px);
       border:1px solid rgba(255,255,255,.08); border-radius:28px; padding:36px; box-shadow:0 20px 60px rgba(0,0,0,.45)}
 
-    h1{font-size: clamp(40px, 7vw, 84px); line-height:1.05; margin:0 0 12px; font-weight:900; letter-spacing:-.02em}
+    h1{font-size: clamp(32px, 7vw, 72px); line-height:1.1; margin:0 0 12px; font-weight:900; letter-spacing:-.02em}
     h2{font-size: clamp(26px, 3.2vw, 44px); margin:0 0 12px}
     h3{margin:14px 0 6px;font-size:22px}
     .muted{color:var(--muted)}
@@ -78,7 +79,7 @@
       linear-gradient(90deg, transparent 95%, rgba(255,255,255,.03) 95%);
       background-size: 40px 40px, 40px 40px; opacity:.15}
 
-    footer{position:fixed; bottom:8px; left:0; right:0; text-align:center; opacity:.6; font-size:12px}
+    footer{position:fixed; left:0; right:0; bottom:env(safe-area-inset-bottom); text-align:center; opacity:.6; font-size:12px}
 
 /* Contact icons */
 .contact-list{display:flex;flex-direction:column;gap:16px;margin-top:20px}
