--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     footer{position:fixed;left:0;right:0;bottom:env(safe-area-inset-bottom);background:#0b0f14;text-align:center;opacity:.6;font-size:12px;padding-bottom:6px;}
 
 /* Skills background */
-.skills-slide{position:relative;background:url('stm32-islemci-kiti.png') center/contain no-repeat;}
+.skills-slide{position:relative;background:url('stm32.png') center/contain no-repeat;}
 .skills-slide::before{content:"";position:absolute;inset:0;background:radial-gradient(circle at center, rgba(11,15,20,.25), rgba(11,15,20,.85));}
 .skills-card{position:relative;z-index:1;}
 
