--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
     .slide{height:100%; display:flex; align-items:center; justify-content:center; padding:24px}
 
     /* Cards / sections */
-    .card{max-width:1000px; width:100%; background:var(--glass); backdrop-filter: blur(10px);
-      border:1px solid rgba(255,255,255,.08); border-radius:28px; padding:36px; box-shadow:0 20px 60px rgba(0,0,0,.45)}
+    .card{width:100%;
+          max-width:1000px;
+          background:rgba(17,24,38,.75); /* DAHA KOYU */
+          backdrop-filter:blur(12px);
+          border-radius:28px;
+          padding:36px;
+          border:1px solid rgba(255,255,255,.12);
+          box-shadow:0 20px 60px rgba(0,0,0,.55);
+          }
 
     h1{font-size: clamp(32px, 7vw, 72px); line-height:1.1; margin:0 0 12px; font-weight:900; letter-spacing:-.02em}
     h2{font-size: clamp(26px, 3.2vw, 44px); margin:0 0 12px}
@@ -71,8 +78,13 @@
     footer{position:fixed;left:0;right:0;bottom:env(safe-area-inset-bottom);background:#0b0f14;text-align:center;opacity:.6;font-size:12px;padding-bottom:6px;}
 
 /* Skills background */
-.skills-slide{position:relative;background:url('stm32.png') center/contain no-repeat;}
-.skills-slide::before{content:"";position:absolute;inset:0;background:radial-gradient(circle at center, rgba(11,15,20,.25), rgba(11,15,20,.85));}
+.skills-slide{position:relative;
+              background:
+              linear-gradient(rgba(11,15,20,.65), rgba(11,15,20,.85)),
+              url("./assets/images/stm32.png");
+              background-repeat:no-repeat;
+              background-position:center right;
+              background-size:520px auto;}
 .skills-card{position:relative;z-index:1;}
 
 /* Contact icons */
