--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
   animation:press .18s ease-out;
   box-shadow:0 8px 20px rgba(0,0,0,.35);
 }
+     h1, h2, h3, h4, h5, h6 {
+    color: #e5e7eb !important;
+  }
   </style>
 </head>
 <body>
