Update certificate grid system and add new items

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     .grid-2{display:grid;grid-template-columns:1fr 1fr; gap:24px}
     @media (max-width:900px){.grid-2{grid-template-columns:1fr}}
 
-    /* --- GÜNCELLENMİŞ SERTİFİKA GRID SİSTEMİ --- */
+    /* --- SERTİFİKA GRID SİSTEMİ --- */
     .cert-grid {
       display: grid;
       /* Mobilde 2 sütun */
@@ -84,7 +84,7 @@
     @media (min-width: 900px) {
       .cert-grid {
         grid-template-columns: repeat(4, 1fr);
-        gap: 24px; /* Satır ve sütun arası boşluk */
+        gap: 24px; 
       }
     }
 
@@ -285,6 +285,19 @@
             </a>
             <a class="cert-item" href="assets/certificates/Üretken_yz_nedir_Linkedin.png" target="_blank">
               <img src="assets/certificates/Üretken_yz_nedir_Linkedin.png" alt="Üretken YZ Nedir" loading="lazy">
+            </a>
+            
+            <a class="cert-item" href="assets/certificates/Proje Yönetimi _ BTK.png" target="_blank">
+              <img src="assets/certificates/Proje Yönetimi _ BTK.png" alt="Proje Yönetimi BTK" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Gönüllü Sertifikası.png" target="_blank">
+              <img src="assets/certificates/Gönüllü Sertifikası.png" alt="Samsung Boğaziçi Yüzme" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Gönüllü Sertifikası 2.png" target="_blank">
+              <img src="assets/certificates/Gönüllü Sertifikası 2.png" alt="Vestel Manisa Maratonu" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Gönüllü sertifikası 3.png" target="_blank">
+              <img src="assets/certificates/Gönüllü sertifikası 3.png" alt="Wings for Life" loading="lazy">
             </a>
 
           </div>
