--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>İsmail Kesmez | Electrical & Electronics Engineer</title>
   <meta name="description" content="İsmail Kesmez - Electrical & Electronics Engineer. Projects, skills and contact." />
+  
+  <link rel="icon" href="assets/images/profile-pic (1).png" type="image/png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
