Add YouTube contact section to index.html
Added YouTube contact link with icon and text.

--- a/index.html
+++ b/index.html
@@ -349,6 +349,15 @@
                 <strong>linkedin.com/in/ismailkesmez</strong>
               </div>
             </a>
+
+            <a class="contact-item" href="https://www.youtube.com/@IsmailKesmez23" target="_blank">
+              <div class="contact-icon">📺</div>
+              <div class="contact-text">
+                <span>YouTube</span>
+                <strong>youtube.com/@IsmailKesmez23</strong>
+              </div>
+            </a>
+
           </div>
         </div>
       </section>
