Add mobile padding adjustment for skills slide
Added mobile-specific padding adjustment for skills slide.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         padding-top: 140px !important;
         overflow: hidden;
     }
+    
+    /* GÜNCELLEME: MOBİLDE YUKARI KAYDIRMA AYARI */
+    @media (max-width: 600px) {
+        .skills-slide {
+            padding-top: 85px !important; /* Telefondan bakınca yukarı boşluğu azalttık */
+        }
+    }
 
     .bg-rotate {
         position: absolute;
