Adjust mobile padding for skills section
Updated mobile padding for skills slide to eliminate top space.

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         overflow: hidden;
     }
     
-    /* GÜNCELLEME: MOBİLDE YUKARI KAYDIRMA AYARI */
+    /* GÜNCELLEME: MOBİLDE SIFIR BOŞLUK */
     @media (max-width: 600px) {
         .skills-slide {
-            padding-top: 85px !important; /* Telefondan bakınca yukarı boşluğu azalttık */
+            padding-top: 60px !important; /* Header yüksekliğine göre sıfırlandı */
         }
     }
 
