Adjust padding for skills slide section
Updated padding for skills slide on desktop and mobile.

--- a/index.html
+++ b/index.html
@@ -141,14 +141,13 @@
     /* SKILLS SLIDE */
     .skills-slide {
         align-items: flex-start !important; 
-        padding-top: 140px !important;
+        padding-top: 80px !important; /* GÜNCELLEME: Bilgisayarda da yukarıya taşıdık (Eskisi 140px) */
         overflow: hidden;
     }
     
-    /* GÜNCELLEME: MOBİLDE SIFIR BOŞLUK */
     @media (max-width: 600px) {
         .skills-slide {
-            padding-top: 60px !important; /* Header yüksekliğine göre sıfırlandı */
+            padding-top: 60px !important; /* Mobilde sıfıra yakın (Header yüksekliği) */
         }
     }
 
