Update padding and add new certificate links

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
     /* SKILLS SLIDE */
     .skills-slide {
         align-items: flex-start !important; 
-        padding-top: 80px !important; /* GÜNCELLEME: Bilgisayarda da yukarıya taşıdık (Eskisi 140px) */
+        padding-top: 80px !important;
         overflow: hidden;
     }
     
     @media (max-width: 600px) {
         .skills-slide {
-            padding-top: 60px !important; /* Mobilde sıfıra yakın (Header yüksekliği) */
+            padding-top: 60px !important;
         }
     }
 
@@ -323,6 +323,17 @@
             <a class="cert-item" href="assets/certificates/Gönüllü sertifikası 3.png" target="_blank">
               <img src="assets/certificates/Gönüllü sertifikası 3.png" alt="Wings for Life" loading="lazy">
             </a>
+            
+            <a class="cert-item" href="assets/certificates/Modern_yönetim_için_iletişim yetenekleri.png" target="_blank">
+              <img src="assets/certificates/Modern_yönetim_için_iletişim yetenekleri.png" alt="Modern Yönetim İletişim" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Yapay_Zekaya_giriş.png" target="_blank">
+              <img src="assets/certificates/Yapay_Zekaya_giriş.png" alt="Yapay Zekaya Giriş" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/YZ_ve_sürdürülebilirliğe_giriş.png" target="_blank">
+              <img src="assets/certificates/YZ_ve_sürdürülebilirliğe_giriş.png" alt="YZ ve Sürdürülebilirlik" loading="lazy">
+            </a>
+
           </div>
         </div>
       </section>
