Add certificate for Cybersecurity Awareness
Added a new certificate link for 'Siber Güvenlik Farkındalığı'.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,6 @@
             <a class="cert-item" href="assets/certificates/Gönüllü sertifikası 3.png" target="_blank">
               <img src="assets/certificates/Gönüllü sertifikası 3.png" alt="Wings for Life" loading="lazy">
             </a>
-            
             <a class="cert-item" href="assets/certificates/Modern_yönetim_için_iletişim yetenekleri.png" target="_blank">
               <img src="assets/certificates/Modern_yönetim_için_iletişim yetenekleri.png" alt="Modern Yönetim İletişim" loading="lazy">
             </a>
@@ -332,6 +331,9 @@
             </a>
             <a class="cert-item" href="assets/certificates/YZ_ve_sürdürülebilirliğe_giriş.png" target="_blank">
               <img src="assets/certificates/YZ_ve_sürdürülebilirliğe_giriş.png" alt="YZ ve Sürdürülebilirlik" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Siber_güvenlik_farkındalığı.png" target="_blank">
+              <img src="assets/certificates/Siber_güvenlik_farkındalığı.png" alt="Siber Güvenlik Farkındalığı" loading="lazy">
             </a>
 
           </div>
