Add new certificate links to index.html

--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@
             <a class="cert-item" href="assets/certificates/Siber_güvenlik_farkındalığı.png" target="_blank">
               <img src="assets/certificates/Siber_güvenlik_farkındalığı.png" alt="Siber Güvenlik Farkındalığı" loading="lazy">
             </a>
+            
+            <a class="cert-item" href="assets/certificates/Linkedin_EkipleriYönetmek.png" target="_blank">
+              <img src="assets/certificates/Linkedin_EkipleriYönetmek.png" alt="Ekipleri Yönetmek" loading="lazy">
+            </a>
+            <a class="cert-item" href="assets/certificates/Yz.png" target="_blank">
+              <img src="assets/certificates/Yz.png" alt="YZ Üretkenlik İpuçları" loading="lazy">
+            </a>
 
           </div>
         </div>
