Update certificate image file formats from JPG to PNG

--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
           
           <div class="cert-grid">
             
-            <a class="cert-item" href="assets/certificates/Electric_Power_Systems.jpg" target="_blank">
-              <img src="assets/certificates/Electric_Power_Systems.jpg" alt="Electric Power Systems" loading="lazy">
+            <a class="cert-item" href="assets/certificates/Electric_Power_Systems.png" target="_blank">
+              <img src="assets/certificates/Electric_Power_Systems.png" alt="Electric Power Systems" loading="lazy">
             </a>
 
-            <a class="cert-item" href="assets/certificates/EmbeddedSystemUsingC.jpg" target="_blank">
-              <img src="assets/certificates/EmbeddedSystemUsingC.jpg" alt="Embedded Systems using C" loading="lazy">
+            <a class="cert-item" href="assets/certificates/EmbeddedSystemUsingC.png" target="_blank">
+              <img src="assets/certificates/EmbeddedSystemUsingC.png" alt="Embedded Systems using C" loading="lazy">
             </a>
 
             <a class="cert-item" href="assets/certificates/Elektrik Proje Temel Eğitimi_Udemy.png" target="_blank">
