Fix certificate image link for Pilotluk sertifikası

--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
               <img src="assets/certificates/Yz.png" alt="YZ Üretkenlik İpuçları" loading="lazy">
             </a>
 
-            <a class="cert-item" href="assets/certificates/Pilotluk sertifikası.png" target="_blank">
-              <img src="assets/certificates/Pilotluk sertifikası.png" alt="İHA-1 Pilot Lisansı" loading="lazy">
+            <a class="cert-item" href="assets/certificates/Pilotluk_sertifikası.png" target="_blank">
+              <img src="assets/certificates/Pilotluk_sertifikası.png" alt="İHA-1 Pilot Lisansı" loading="lazy">
             </a>
 
           </div>
